<resources>
    <string name="app_name">HX</string>
    <string name="login_user">请输入用户名</string>
    <string name="login_pswd">请输入密码</string>
    <string name="login_login">登  陆</string>
    <string name="login_regster">新用户注册</string>
    <string name="regster_regster">注  册</string>
    <string name="addfriend">添  加</string>

    <!-- Emoji -->
    <string name="face_recently">Recently</string>
    <string name="face_Emoji">Emoji</string>
    <string name="face_set_one">Default</string>
</resources>
